--- a/infrastructure/controllers/base/democratic-csi/release-nfs.yaml
+++ b/infrastructure/controllers/base/democratic-csi/release-nfs.yaml
@@ -88,26 +88,47 @@ spec:
           shareMapallGroup: ""
 
     controller:
-      driver:
-        image: docker.io/democraticcsi/democratic-csi:latest
-      externalProvisioner:
-        image: registry.k8s.io/sig-storage/csi-provisioner:v5.1.0
-      externalResizer:
-        image: registry.k8s.io/sig-storage/csi-resizer:v1.12.0
-      externalSnapshotter:
-        enabled: false
-
-    node:
+      enabled: true
       driver:
         image:
           registry: docker.io
           repository: democraticcsi/democratic-csi
           tag: latest
+          pullPolicy: IfNotPresent
+      externalProvisioner:
+        enabled: true
+        image:
+          registry: registry.k8s.io
+          repository: sig-storage/csi-provisioner
+          tag: v5.1.0
+          pullPolicy: IfNotPresent
+      externalResizer:
+        enabled: true
+        image:
+          registry: registry.k8s.io
+          repository: sig-storage/csi-resizer
+          tag: v1.12.0
+          pullPolicy: IfNotPresent
+      externalSnapshotter:
+        enabled: false
+      externalAttacher:
+        enabled: false
+
+    node:
+      enabled: true
+      driver:
+        image:
+          registry: docker.io
+          repository: democraticcsi/democratic-csi
+          tag: latest
+          pullPolicy: IfNotPresent
       driverRegistrar:
+        enabled: true
         image:
           registry: registry.k8s.io
           repository: sig-storage/csi-node-driver-registrar
           tag: v2.12.0
+          pullPolicy: IfNotPresent
       hostPID: true
       tolerations:
       - effect: NoSchedule
