--- a/infrastructure/controllers/base/democratic-csi/release-nfs.yaml
+++ b/infrastructure/controllers/base/democratic-csi/release-nfs.yaml
@@ -49,9 +49,9 @@ spec:
         driver: freenas-nfs
         instance_id:
         httpConnection:
-          protocol: http  # Change to https if SSL configured
+          protocol: https  # Change to https if SSL configured
           host: 192.168.178.59  # YOUR TRUENAS IP
-          port: 80  # Change to 443 for https
+          port: 443  # Change to 443 for https
           apiVersion: 2 
           allowInsecure: true
         zfs:
