--- a/infrastructure/controllers/base/democratic-csi/release-nfs.yaml
+++ b/infrastructure/controllers/base/democratic-csi/release-nfs.yaml
@@ -1,69 +1,122 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: truenas-nfs
+  name: nfs
   namespace: democratic-csi
 spec:
-  interval: 30m
+  interval: 5m
+  timeout: 15m
   chart:
     spec:
       chart: democratic-csi
-      version: '>=0.14.0'
       sourceRef:
         kind: HelmRepository
         name: democratic-csi
-        namespace: democratic-csi
-      interval: 12h
+        namespace: flux-system
   valuesFrom:
   - kind: Secret
     name: truenas-api-key
     valuesKey: apiKey
     targetPath: driver.config.httpConnection.apiKey
   values:
+    controller:
+      externalAttacher:
+        resources:
+          requests:
+            cpu: 10m
+            memory: 50M
+            ephemeral-storage: 100Mi
+          limits:
+            memory: 100Mi
+            ephemeral-storage: 200Mi
+      externalProvisioner:
+        resources:
+          requests:
+            cpu: 10m
+            memory: 50M
+            ephemeral-storage: 100Mi
+          limits:
+            memory: 100M
+            ephemeral-storage: 200Mi
+      externalResizer:
+        resources:
+          requests:
+            cpu: 10m
+            memory: 50Mi
+            ephemeral-storage: 100Mi
+          limits:
+            memory: 100Mi
+            ephemeral-storage: 200Mi
+      externalSnapshotter:
+        resources:
+          requests:
+            cpu: 10m
+            memory: 30Mi
+            ephemeral-storage: 100Mi
+          limits:
+            memory: 100Mi
+            ephemeral-storage: 200Mi
+      driver:
+        image:
+          registry: docker.io/democraticcsi/democratic-csi
+          tag: next
+          pullPolicy: Always
+        resources:
+          requests:
+            cpu: 10m
+            memory: 50Mi
+            ephemeral-storage: 100Mi
+          limits:
+            memory: 100Mi
+            ephemeral-storage: 200Mi
+    csiProxy:
+      resources:
+        requests:
+          cpu: 10m
+          memory: 100Mi
+          ephemeral-storage: 100Mi
+        limits:
+          memory: 100Mi
+          ephemeral-storage: 200Mi
     csiDriver:
-      name: "org.democratic-csi.nfs"
-
+      name: "nfs"
     storageClasses:
-    - name: truenas-nfs
-      defaultClass: true
-      reclaimPolicy: Retain
-      volumeBindingMode: Immediate
-      allowVolumeExpansion: true
-      parameters:
-        fsType: nfs
-      mountOptions:
-      - nfsvers=3
-      - nconnect=8
-      - hard
-      - noatime
-      secrets:
-        provisioner-secret:
-        controller-publish-secret:
-        node-stage-secret:
-        node-publish-secret:
-        controller-expand-secret:
-    volumeSnapshotClasses: []
-
+      - name: nfs
+        defaultClass: true
+        reclaimPolicy: Retain
+        volumeBindingMode: Immediate
+        allowVolumeExpansion: true
+        parameters:
+          fsType: nfs
+          detachedVolumesFromSnapshots: "false"
+        mountOptions:
+          ["nfsvers=4.2", "nconnect=8", "hard", "noatime", "nodiratime"]
+        secrets:
+          provisioner-secret:
+          controller-publish-secret:
+          node-stage-secret:
+          node-publish-secret:
+          controller-expand-secret:
     driver:
       config:
-        driver: freenas-nfs
+        driver: freenas-api-nfs
         instance_id:
         httpConnection:
-          protocol: https  # Change to https if SSL configured
-          host: 192.168.178.59  # YOUR TRUENAS IP
-          port: 443  # Change to 443 for https
-          apiVersion: 2 
+          protocol: http
+          host: 192.168.178.59
+          port: 80
           allowInsecure: true
+          apiVersion: 2
         zfs:
-          datasetParentName: treasure-chest/k8s/volumes  # CHANGE THIS
-          detachedSnapshotsDatasetParentName: "treasure-chest/k8s/snapshots"
+          datasetParentName: treasure-chest/nfs/v
+          detachedSnapshotsDatasetParentName: treasure-chest/nfs/s
           datasetEnableQuotas: true
           datasetEnableReservation: false
           datasetPermissionsMode: "0777"
           datasetPermissionsUser: 0
           datasetPermissionsGroup: 0
         nfs:
-          shareHost: 192.168.178.59  # YOUR TRUENAS IP
+          shareHost: 192.168.178.59
           shareAlldirs: false
           shareAllowedHosts: []
           shareAllowedNetworks: []
@@ -71,52 +124,35 @@ spec:
           shareMaprootGroup: root
           shareMapallUser: ""
           shareMapallGroup: ""
-
-    controller:
-      enabled: true
+    node:
       driver:
-        logLevel: debug  # Add this
-        extraEnv:
-        - name: GRPC_TRACE
-          value: "all"
-        - name: GRPC_VERBOSITY
-          value: "DEBUG"
         image:
           registry: docker.io/democraticcsi/democratic-csi
           tag: next
-          pullPolicy: IfNotPresent
-      externalProvisioner:
-        enabled: true
-        image:
-          registry: registry.k8s.io/sig-storage/csi-provisioner
-          tag: v3.6.0
-          pullPolicy: IfNotPresent
-      externalResizer:
-        enabled: true
-        image:
-          registry: registry.k8s.io/sig-storage/csi-resizer
-          tag: v1.9.0
-          pullPolicy: IfNotPresent
-      externalSnapshotter:
-        enabled: false
-      externalAttacher:
-        enabled: false
-
-    node:
-      enabled: true
-      driver:
-        image:
-          registry: docker.io/democraticcsi/democratic-csi
-          tag: latest
-          pullPolicy: IfNotPresent
+          pullPolicy: Always
+        resources:
+          requests:
+            cpu: 30m
+            memory: 100Mi
+            ephemeral-storage: 100Mi
+          limits:
+            memory: 200Mi
+            ephemeral-storage: 200Mi
       driverRegistrar:
-        enabled: true
-        image:
-          registry: registry.k8s.io/sig-storage/csi-node-driver-registrar
-          tag: v2.9.0
-          pullPolicy: IfNotPresent
-      hostPID: true
-      tolerations:
-      - effect: NoSchedule
-        key: node-role.kubernetes.io/control-plane
-        operator: Exists
+        resources:
+          requests:
+            cpu: 10m
+            memory: 100Mi
+            ephemeral-storage: 100Mi
+          limits:
+            memory: 200Mi
+            ephemeral-storage: 200Mi
+      cleanup:
+        resources:
+          requests:
+            cpu: 10m
+            memory: 100Mi
+            ephemeral-storage: 100Mi
+          limits:
+            memory: 200Mi
+            ephemeral-storage: 200Mi
