--- a/apps/staging/linkding/kustomization.yaml
+++ b/apps/staging/linkding/kustomization.yaml
@@ -2,7 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: linkding
 resources:
-  - ../../base/linkding
+  - ../../base/linkding/
   - cloudflare-secret.yaml
   - cloudflare.yaml
   - linkding-container-env-secret.yaml
