--- a/apps/staging/booklore/kustomization.yaml
+++ b/apps/staging/booklore/kustomization.yaml
@@ -1,7 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: calibre
+namespace: linkding
 resources:
-  # - ../../base/calibre/
-  # - cloudflare.yaml
+  - ../../base/booklore/
   # - cloudflare-secret.yaml
+  # - cloudflare.yaml
