--- a/apps/staging/booklore/kustomization.yaml
+++ b/apps/staging/booklore/kustomization.yaml
@@ -1,6 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: linkding
+namespace: booklore
 resources:
   - ../../base/booklore/
   # - cloudflare-secret.yaml
