fix: correct image tag

--- a/apps/base/booklore/booklore/deployment.yaml
+++ b/apps/base/booklore/booklore/deployment.yaml
@@ -25,7 +25,7 @@ spec:
           done
       containers:
       - name: booklore
-        image: booklore/booklore-app:1.18.5
+        image: booklore/booklore-app:v1.18.5
         env:
         - name: USER_ID
           value: "1000"
