--- a/apps/staging/booklore/kustomization.yaml
+++ b/apps/staging/booklore/kustomization.yaml
@@ -3,5 +3,5 @@ kind: Kustomization
 namespace: booklore
 resources:
   - ../../base/booklore/
-  # - cloudflare-secret.yaml
-  # - cloudflare.yaml
+  - cloudflare-secret.yaml
+  - cloudflare.yaml
