--- a/apps/staging/homarr/kustomization.yaml
+++ b/apps/staging/homarr/kustomization.yaml
@@ -3,5 +3,5 @@ kind: Kustomization
 namespace: homarr
 resources:
   - ../../base/homarr/
-  # - cloudflare-secret.yaml
-  # - cloudflare.yaml
+  - cloudflare-secret.yaml
+  - cloudflare.yaml
