--- a/infrastructure/controllers/base/tailscale/repository.yaml
+++ b/infrastructure/controllers/base/tailscale/repository.yaml
@@ -2,7 +2,7 @@ apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
   name: tailscale
-  namespace: flux-system
+  namespace: tailscale
 spec:
   interval: 1h
   url: https://pkgs.tailscale.com/helmcharts
