fix: correct namespace

--- a/infrastructure/controllers/base/tailscale/release.yaml
+++ b/infrastructure/controllers/base/tailscale/release.yaml
@@ -12,7 +12,7 @@ spec:
       sourceRef:
         kind: HelmRepository
         name: tailscale
-        namespace: flux-system
+        namespace: tailscale
       interval: 12h
   install:
     crds: CreateReplace
