--- a/apps/base/nextcloud/release.yaml
+++ b/apps/base/nextcloud/release.yaml
@@ -8,7 +8,7 @@ spec:
   chart:
     spec:
       chart: nextcloud
-      version: "5.5.x"  # Check for latest version
+      version: "8.9.1"
       sourceRef:
         kind: HelmRepository
         name: nextcloud
