fix: rework the pws

--- a/apps/base/nextcloud/release.yaml
+++ b/apps/base/nextcloud/release.yaml
@@ -22,90 +22,55 @@ spec:
       retries: 3
   values:
     image:
-      flavor: fpm-alpine
-      
-    # Use existing secret
-    existingSecret:
-      enabled: true
-      secretName: nextcloud-secrets
-      usernameKey: nextcloud-username
-      passwordKey: nextcloud-password
+      flavor: apache
     
+    # Nextcloud admin credentials from secret
     nextcloud:
-      host: nextcloud.your-domain.com  # Change this
-      # Or for Tailscale (we'll expose this later):
-      # host: nextcloud  
+      host: nextcloud
+      existingSecret:
+        enabled: true
+        secretName: nextcloud-secrets
+        usernameKey: nextcloud-username
+        passwordKey: nextcloud-password
       
       extraEnv:
         - name: OVERWRITEPROTOCOL
           value: "https"
-      
-      # PHP settings for better performance
-      phpConfigs:
-        uploadLimit.ini: |
-          upload_max_filesize = 16G
-          post_max_size = 16G
-          max_input_time = 3600
-          max_execution_time = 3600
-        www.conf: |
-          pm = dynamic
-          pm.max_children = 120
-          pm.start_servers = 12
-          pm.min_spare_servers = 6
-          pm.max_spare_servers = 18
-      
-      # Default apps to install
-      defaultConfigs:
-        .htaccess: true
-        redis.config.php: true
-        apache-pretty-urls.config.php: true
-        apcu.config.php: true
-        apps.config.php: true
-        autoconfig.php: true
-        smtp.config.php: true
-      
-      configs:
-        proxy.config.php: |-
-          <?php
-          $CONFIG = array (
-            'trusted_proxies' => array(
-              0 => '127.0.0.1',
-              1 => '10.0.0.0/8',
-            ),
-            'forwarded_for_headers' => array('HTTP_X_FORWARDED_FOR'),
-          );
     
-    # Use existing PVC for data
+    # Enable persistence with your PVC
     persistence:
       enabled: true
       existingClaim: nextcloud-data
       accessMode: ReadWriteMany
     
-    # Internal PostgreSQL database
+    # DISABLE internal database (SQLite)
     internalDatabase:
       enabled: false
     
+    # ENABLE external database (PostgreSQL)
     externalDatabase:
       enabled: true
       type: postgresql
       host: nextcloud-postgresql
       database: nextcloud
+      user: nextcloud
       existingSecret:
         enabled: true
         secretName: nextcloud-secrets
-        usernameKey: nextcloud-username
         passwordKey: postgresql-password
     
-    # PostgreSQL subchart
+    # PostgreSQL subchart configuration
     postgresql:
       enabled: true
-      auth:
-        username: nextcloud
-        database: nextcloud
-        existingSecret: nextcloud-secrets
-        secretKeys:
-          adminPasswordKey: postgresql-password
-          userPasswordKey: postgresql-password
+      global:
+        postgresql:
+          auth:
+            username: nextcloud
+            database: nextcloud
+            existingSecret: nextcloud-secrets
+            secretKeys:
+              adminPasswordKey: postgresql-postgres-password
+              userPasswordKey: postgresql-password
       primary:
         persistence:
           enabled: true
@@ -115,15 +80,13 @@ spec:
     redis:
       enabled: true
       auth:
-        enabled: false
+        enabled: true
+        existingSecret: nextcloud-secrets
+        existingSecretPasswordKey: redis-password
       master:
         persistence:
           enabled: false
     
-    # Nginx for serving static files (with FPM)
-    nginx:
-      enabled: true
-      
     # Resources
     resources:
       requests:
@@ -132,7 +95,7 @@ spec:
       limits:
         memory: 2Gi
     
-    # Cronjob for background tasks
+    # Cronjob
     cronjob:
       enabled: true
-      schedule: "*/5 * * * *"
+      type: sidecar
