--- a/apps/staging/nextcloud/secret.yaml
+++ b/apps/staging/nextcloud/secret.yaml
@@ -5,21 +5,26 @@ metadata:
     namespace: nextcloud
 type: Opaque
 stringData:
-    nextcloud-username: ENC[AES256_GCM,data:OUDsiQCU,iv:LWS1JEmLPxEis9Odsfou3QkzmwIXnM8mPwg4fz7gVq8=,tag:EFk4QxvqfNfiCo0X2hZW2g==,type:str]
-    nextcloud-password: ENC[AES256_GCM,data:Aoap725gSV3d+wv/jNtwUO6UzfteTV8RwA==,iv:j0k9uNJMmNpePlsu6StH6leVRUtSj/UWNBhpLalF+DY=,tag:MzKdbqzCrBZO93+a4StQvA==,type:str]
-    postgresql-password: ENC[AES256_GCM,data:q2zgih4k2qaB1SyImClyLDVFPwgwcfHrKA==,iv:OwZP0EWcs5SpLbLDDAegIFmZlnHZUnB+m/088PJGvDQ=,tag:ivMOoaHpQMb9X1JqJYn6Eg==,type:str]
+    #ENC[AES256_GCM,data:TS7TMj8AxvErGh2RG4iy9+Xr/7pwBwzn/6L78A==,iv:+6QPsZ6qiLJD31Ae7VyWrHie4vrk8HbTishLIQ6i57g=,tag:3T07zEgSIpB1ay9ZlRfs9A==,type:comment]
+    nextcloud-username: ENC[AES256_GCM,data:VcO+WeoV,iv:X2EOhFn5ubA1PV1MwmRhaoBBJB8dKb5s0fK8QIcInBs=,tag:byR46NMvSEiYOfFnjVATRg==,type:str]
+    nextcloud-password: ENC[AES256_GCM,data:Tn4+IdvYIAHVHAXj3dqe/K6DIDQQWEDIVg==,iv:mUxtTpDQ3V5AXXzfxnaFdNO5YuHpl445iFXt+taJI6o=,tag:RDm+FKrqfaGybc1EwXGLMQ==,type:str]
+    #ENC[AES256_GCM,data:dXkyAuSy4Yfx8ICEbCSFhN2n7KY58Ok=,iv:ZPOrGCuSfSZ8ZGGL4BuaXIGcbE+1f8K0oLOpGkLfKAs=,tag:DkRyOR6Ua0vo6OMkFBM+/A==,type:comment]
+    postgresql-password: ENC[AES256_GCM,data:D5sX6r/P51bqd7sfJrqheheuK96RNFrlsQ==,iv:wzfytRjiobIxhHERTYgO8iomYciImP/Oa3RkOJv8loI=,tag:NkeheY+3XL8qQrKNQABqvQ==,type:str]
+    postgresql-postgres-password: ENC[AES256_GCM,data:PgPvpGbofDIRSa/jijSG1bC01NyoJGV/PA==,iv:S2AQoY93V7tmZOocMcl+qjobg1EFKSnTguaRokf+T3I=,tag:t7Vz6odL5KFMcpiJ2AklzQ==,type:str]
+    #ENC[AES256_GCM,data:r3FaR3XsGnW/VtLoy9BI,iv:JgaXZmXUHkhnYiQ5EerNz3MOGlnKqczvbSGnEf+foqo=,tag:OpclBS9d2+hBYvu9bZFumg==,type:comment]
+    redis-password: ENC[AES256_GCM,data:bRONAeS6LYeii1cLfLGpHNp/XhudI0gBnQ==,iv:k9a9MVLzbMZN5jwFrflG9GAxwQT4c4k54iw6Ey+EPYg=,tag:PhOmaMfWaUbx7vwNZJEx8w==,type:str]
 sops:
     age:
         - recipient: age1a0xr84tcmzhnm6qsv3ar3pc80pnf84p9gaqv329kmkxktynkna0sh50rp7
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBKcXdteVZ4MEdxcElZY0VO
-            SVo4U0poSjBDbzI5dm5PWE1BSmJzM0ZUOERFCjhVNmRRR0p5QnI1TXBzMUlyY0tQ
-            azJCOTB4T2lxU042eHJ6em1sQjBpalkKLS0tIFRRRDhueUZ4OHFRRTA0SGh6aS9O
-            ek9EenVJWXZwL2FSb0loMTgzMnFqbzQKiwdy+IQKgEubgxS4CUnUogpdGAX8EYeU
-            +QFk/dmAazy2OjdHpR+rmPyxI5jEI/O/f8YKshONOAVfo8Stc8yaGg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBEMC8zVnFNNWh4RS9jUGhz
+            aHJoRDRlUDJYZWV6eU5uSFF0TDZPL0RvbFNNCm9xOGtKNytza0k3YmxlcFRRUVI2
+            b1N5OVJZa2NjVmJwc3pWZ01xMWQ3d0kKLS0tIEJVTXliYm9QVFl2d0s2WWltVXRG
+            NFJTQ29Vak9rUk9DaU5pZVV1WXc1RVkKU07doJvbHp/qaNzqYkF2EsIRUVkTIT4S
+            4FMJUSr40fhhT+5NsrxlZYGlN8x3R4wQ/yMUGY4zQctQHg9gwKKH6Q==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2026-02-16T17:39:04Z"
-    mac: ENC[AES256_GCM,data:o2gew49W4tWhXen2lKEBZUf9ol2Psb7MBedc5QcV2BXsVLbGyExN4nvIJFz1wcun3C55RiWyFle/+9RCvPTv0M49+/txuNticUxwtSXUmIGbUFtvx6vwmdKCND9MT6/CtUjE5zG/26JPPub4tsuauFQCOCtHGip4DA8SxnbkUS4=,iv:XAiDVHENt+UqMLYUA1JtgPXv+q9gq0kLj4Pkkl+VLOA=,tag:R5VFe7ilYWRfWFBelWjI1w==,type:str]
+    lastmodified: "2026-02-16T19:27:29Z"
+    mac: ENC[AES256_GCM,data:zChCWszpZjA628GmGQ2M9+SryHZxE+i4eb+BrkXMiPh0xAm9rldfT1/eiX/EHWTmY3sGpQyIVtLWVbdJ8u2/FHO1jdicy0dkw6Rq5g6RxjW6XSSwA6o5cOmDIVDkaezXukRhOCxynSKuj+36gPt1/fZxH7IEQ2orVsLZmV7Co1U=,iv:Bym1TkS/th93HFNrvtDfFczglwvvESHZSU3nLusFJqg=,tag:wXQ7jLBqjgYjGF/1dCks1A==,type:str]
     encrypted_regex: ^(data|stringData)$
     version: 3.11.0
