fix: update secrets

--- a/apps/staging/nextcloud/secret.yaml
+++ b/apps/staging/nextcloud/secret.yaml
@@ -5,26 +5,28 @@ metadata:
     namespace: nextcloud
 type: Opaque
 stringData:
-    #ENC[AES256_GCM,data:TS7TMj8AxvErGh2RG4iy9+Xr/7pwBwzn/6L78A==,iv:+6QPsZ6qiLJD31Ae7VyWrHie4vrk8HbTishLIQ6i57g=,tag:3T07zEgSIpB1ay9ZlRfs9A==,type:comment]
-    nextcloud-username: ENC[AES256_GCM,data:VcO+WeoV,iv:X2EOhFn5ubA1PV1MwmRhaoBBJB8dKb5s0fK8QIcInBs=,tag:byR46NMvSEiYOfFnjVATRg==,type:str]
-    nextcloud-password: ENC[AES256_GCM,data:Tn4+IdvYIAHVHAXj3dqe/K6DIDQQWEDIVg==,iv:mUxtTpDQ3V5AXXzfxnaFdNO5YuHpl445iFXt+taJI6o=,tag:RDm+FKrqfaGybc1EwXGLMQ==,type:str]
-    #ENC[AES256_GCM,data:dXkyAuSy4Yfx8ICEbCSFhN2n7KY58Ok=,iv:ZPOrGCuSfSZ8ZGGL4BuaXIGcbE+1f8K0oLOpGkLfKAs=,tag:DkRyOR6Ua0vo6OMkFBM+/A==,type:comment]
-    postgresql-password: ENC[AES256_GCM,data:D5sX6r/P51bqd7sfJrqheheuK96RNFrlsQ==,iv:wzfytRjiobIxhHERTYgO8iomYciImP/Oa3RkOJv8loI=,tag:NkeheY+3XL8qQrKNQABqvQ==,type:str]
-    postgresql-postgres-password: ENC[AES256_GCM,data:PgPvpGbofDIRSa/jijSG1bC01NyoJGV/PA==,iv:S2AQoY93V7tmZOocMcl+qjobg1EFKSnTguaRokf+T3I=,tag:t7Vz6odL5KFMcpiJ2AklzQ==,type:str]
-    #ENC[AES256_GCM,data:r3FaR3XsGnW/VtLoy9BI,iv:JgaXZmXUHkhnYiQ5EerNz3MOGlnKqczvbSGnEf+foqo=,tag:OpclBS9d2+hBYvu9bZFumg==,type:comment]
-    redis-password: ENC[AES256_GCM,data:bRONAeS6LYeii1cLfLGpHNp/XhudI0gBnQ==,iv:k9a9MVLzbMZN5jwFrflG9GAxwQT4c4k54iw6Ey+EPYg=,tag:PhOmaMfWaUbx7vwNZJEx8w==,type:str]
+    #ENC[AES256_GCM,data:Oj4Y/vaqknl3LT66jOoQB8izu3xIpk9WdaUDjQ==,iv:oVCF9Yt2gO3KPc33KS7m9r1nqCMUH/hvOBQueN5Vk30=,tag:EXVdcsGxp2PEHUgFXBJ2nA==,type:comment]
+    nextcloud-username: ENC[AES256_GCM,data:BhI+sigp,iv:WqvWAEfzjqLV1o8tFFGUOlbq2T9b+Wf8bjNq1fQjsKo=,tag:eaGzTtzI/+lFI1hiWedq0A==,type:str]
+    nextcloud-password: ENC[AES256_GCM,data:Q0z12f8aUXjB5IYzm6RTnpwNbkEMqBwdlQ==,iv:inwITUaqnoYAEGJESNnjyHaBIij/+/6ZcIfptNy54hg=,tag:O7fy48vLRWZrxylWjOxl0g==,type:str]
+    #ENC[AES256_GCM,data:m85oWMjg5ypRWuq6P/jH651VugEW5oZQlDBwrwJ9wmnyNN+vEdZg,iv:9GuIYGQ8h+GP+e4g/Jp6obTmkgXKw6s/8sBCzEHOTLE=,tag:5ijvHHFyvNCQxfMKXs9YSw==,type:comment]
+    db-username: ENC[AES256_GCM,data:nLP7cKL6XH0I,iv:jH9IvhVZWieFJSIN9OfYeTSbIy6HIzhhzXz3d2MK1os=,tag:UooqgCmSLvFRuJPq6uDjtQ==,type:str]
+    #ENC[AES256_GCM,data:XFeX9iHaKx9xNXGj+w3ghCXuhabdxTw=,iv:iAjgG4EHSbeU37Geb2J1gAhK6dJGMGLLen+D2k73Gc0=,tag:1NaBUu5gBACqPuI8IoDsBg==,type:comment]
+    postgresql-password: ENC[AES256_GCM,data:eWzXB282wFq1cyj+c+dOVnPDcimEjDBIXQ==,iv:1KyB1LP8gNUs36fS9MOXx2qeAm2d7kCe3Ll8NZsakk0=,tag:EOsPNKMILL2j/FQo3RAm7Q==,type:str]
+    postgresql-postgres-password: ENC[AES256_GCM,data:+qOrzMNoy9KV/9zZrfrcRZ5IoUcrdg9l9g==,iv:aX1K428hzti71yIOtElOVSWzkrR6RTQ66A1RcQdr9is=,tag:JW+MDU1p+XD2d82fP159hQ==,type:str]
+    #ENC[AES256_GCM,data:qk86aqxj+M2oY7X8uIfd,iv:4m4ZW6g0iWhX0CEKR1qhjJKiCqWuKS3h9iZiwfcW9/8=,tag:BmOeESvBYkbWwbaYNl0O6A==,type:comment]
+    redis-password: ENC[AES256_GCM,data:UItHxTQAox9ZjMJJFtOLQxO/aOi8eDT+mg==,iv:DKnvXcr8WhpxF2AhFAwcdB+ivV9TpnDqHItdRk8ay8w=,tag:QtCN5zo957nOIzkyV9eV/g==,type:str]
 sops:
     age:
         - recipient: age1a0xr84tcmzhnm6qsv3ar3pc80pnf84p9gaqv329kmkxktynkna0sh50rp7
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBEMC8zVnFNNWh4RS9jUGhz
-            aHJoRDRlUDJYZWV6eU5uSFF0TDZPL0RvbFNNCm9xOGtKNytza0k3YmxlcFRRUVI2
-            b1N5OVJZa2NjVmJwc3pWZ01xMWQ3d0kKLS0tIEJVTXliYm9QVFl2d0s2WWltVXRG
-            NFJTQ29Vak9rUk9DaU5pZVV1WXc1RVkKU07doJvbHp/qaNzqYkF2EsIRUVkTIT4S
-            4FMJUSr40fhhT+5NsrxlZYGlN8x3R4wQ/yMUGY4zQctQHg9gwKKH6Q==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA3TTZLeXUxa2pTdnoxZlpM
+            RGdTaitMTVRnNk9oK0t2d2xhRnQxVlZybjBrCjcvRi9iWFlvOFoxRDkxTnBldWY3
+            OVBtaVd6cnpxaktTNGQ4MnI4RTEwMlEKLS0tIGo2NnlOcTgyTjJMRnFxeWpHWjZ5
+            TjZac2lsaW9pSzR3Qjg0TXpoOWNnMmMKOTdUgWdNPz4qW3kSstEN1wle8sUPYh//
+            5Vkg5EFd9wajcoRpuQIauOxkq3Iw+ZACTwh3xChAf1R+H9Sl1dUqRQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2026-02-16T19:27:29Z"
-    mac: ENC[AES256_GCM,data:zChCWszpZjA628GmGQ2M9+SryHZxE+i4eb+BrkXMiPh0xAm9rldfT1/eiX/EHWTmY3sGpQyIVtLWVbdJ8u2/FHO1jdicy0dkw6Rq5g6RxjW6XSSwA6o5cOmDIVDkaezXukRhOCxynSKuj+36gPt1/fZxH7IEQ2orVsLZmV7Co1U=,iv:Bym1TkS/th93HFNrvtDfFczglwvvESHZSU3nLusFJqg=,tag:wXQ7jLBqjgYjGF/1dCks1A==,type:str]
+    lastmodified: "2026-02-16T19:40:25Z"
+    mac: ENC[AES256_GCM,data:9iJaYB2qFLWNQcxNj+g2Jns0hGRVXd/WOQMPsQsaQCHGcD+sVKMvWz5xVPt/8qVIQ3oFTHlryYMcauy1IDiuRLuCywaZh2fRDqK99lZez1cMF5sbl7hEN+srq+oQlE1Ym4dvtihVced57qMIj6ngKvEZznRlXfykwzYWTyu7qt0=,iv:AnENfgHVjMB+HvYCWZ3vm5T8EaH8i9wjj7aV8FnZTOc=,tag:cyu/WHmmupAO/6D85Z+i+w==,type:str]
     encrypted_regex: ^(data|stringData)$
     version: 3.11.0
