--- a/apps/base/nextcloud/kustomization.yaml
+++ b/apps/base/nextcloud/kustomization.yaml
@@ -2,7 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: nextcloud
 resources:
-  - namespace.yaml
-  - repository.yaml
-  - storage.yaml
-  - release.yaml
+  # - namespace.yaml
+  # - repository.yaml
+  # - storage.yaml
+  # - release.yaml
