--- a/apps/staging/nextcloud/kustomization.yaml
+++ b/apps/staging/nextcloud/kustomization.yaml
@@ -2,5 +2,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: nextcloud
 resources:
-  - ../../base/nextcloud/
-  - secret.yaml
+  # - ../../base/nextcloud/
+  # - secret.yaml
